chore: implement consumeInvite
Refine invite consume API, implement controller with backing storage.
